# MolecularDynamics

./: Gemfile  _config.yml  impressum.md  index.md  run_docker.sh
_lecture/: chapter00.md  chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md  chapterA1.md  chapterA2.md
_notes/: CMake.md  Meson.md  benchmarking.md  bwUniCluster.md  code_organisation.md  debugging.md  eV_A_units.md  eigen.md  figures.md  references_and_pointers.md  running_mpi_programs.md  scaling.md
_notes/benchmarks/: .clang-format  CMakeLists.txt  gemv_benchmarks.cpp  meson.build  plot_benchmark.py
_notes/benchmarks/fixed/: gemv_benchmarks.cpp
_notes/debug/: CMakeLists.txt  localaddress.cpp  meson.build  nullpointer.cpp  outofbounds.cpp  signedintegers.cpp
_notes/debug/fixed/: CMakeLists.txt  localaddress.cpp  meson.build  nullpointer.cpp  outofbounds.cpp  signedintegers.cpp
_notes/eigen/: CMakeLists.txt  animate.py  kinetic_energy.cpp  meson.build  plot.py  plot_scaling.py  timeit.sh  wave.cpp  wave_mpi.cpp
_notes/scaling/: meson.build  plot_strong_scaling.py  timeit_strong.sh  wave_mpi.cpp
_project/: ducastelle.cpp  milestone01.md  milestone02.md  milestone03.md  milestone04.md  milestone06.md  milestone07.md  milestone08.md  neighbors.cpp  neighbors.h  test_domain.cpp  test_neighbors.cpp  your_final_report.md
